# textual-serve

./: .gitignore  README.md  pyproject.toml
examples/: dictionary.py  download_screenshot.py  open_link.py  serve.py  serve_any.py  serve_dictionary.py  serve_open_link.py
src/textual_serve/: __init__.py  app_service.py  codec.py  download_manager.py  json_codec.py  packet_decoder.py  packets.py  runner.py  server.py
src/textual_serve/static/: index.html
src/textual_serve/static/js/: textual.js
