[project]
name = "textual-serve"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Will McGugan", email = "willmcgugan@gmail.com" }
]
dependencies = [
    "textual>=0.66.0",
    "aiohttp>=3.9.5",
    "aiohttp-jinja2>=1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_serve"]
