[project]
name = "textual-serve"
version = "1.0.3"
description = "Turn your Textual TUIs in to web applications"
authors = [
    { name = "Will McGugan", email = "will@textualize.io" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1.4",
    "textual>=0.66.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "httpx",  # required to run the dictionary example
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_serve"]
